[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankle"
version = "2.0.0"
description = "Web Infrastructure Reconnaissance Tool - 100% Open Source, No API Keys"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Javier Coscolla", email = "javier@example.com"}
]
maintainers = [
    {name = "Javier Coscolla", email = "javier@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "beautifulsoup4>=4.12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
]
keywords = [
    "security",
    "reconnaissance",
    "osint",
    "web-security",
    "penetration-testing",
    "bug-bounty",
    "dns",
    "ssl",
    "waf-detection",
    "cdn-detection",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
extended = [
    "python-whois>=0.9.0",
    "ipwhois>=1.2.0",
]

[project.urls]
homepage = "https://github.com/javicosvml/rankle"
documentation = "https://github.com/javicosvml/rankle/blob/main/README.md"
repository = "https://github.com/javicosvml/rankle"
bug-tracker = "https://github.com/javicosvml/rankle/issues"
changelog = "https://github.com/javicosvml/rankle/blob/main/CHANGELOG.md"

[project.scripts]
rankle = "rankle.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rankle*", "config*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
config = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=rankle --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.coverage.run]
source = ["rankle"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
